k8s/00-namespace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hasu-ml
  labels:
    name: hasu-ml
    environment: production
